# joystick_overlay

./: .gitignore  12-reglas-ia-gpl3.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  analisis_profundo.md  bindings.json  button_format_selector.py  cli.py  config.py  configure.py  doctor.py  hud_renderer.py  indice_agente.md  input_reader.py  input_selector.py  install.sh  joystick_bindings.json  joystick_mapper.py  keymapper.py  main.py  profile_config_menu.py  profile_store.py  profiles.json  pyproject.toml  reglas_rapidas.md  reporte.md  requirements.txt  tournament.py  utils.py
config/: config.py
core/: state_manager.py
docs/: CONTRIBUTING.md  INDEX.md  README.md
install/: joystick-overlay-config.desktop  joystick-overlay-tournament.desktop  joystick-overlay.desktop
maps/: input_reader.py  joystick_mapper.py  keymapper.py
profiles/: __init__.py  hud_layout.py  profile_export.py  profile_store.py
render/: __init__.py  button_format_selector.py  hud_layout_editor.py  hud_renderer.py  input_selector.py  profile_config_menu.py
scripts/: check_doc_links.py  install.sh  run.sh  safe_zip_update_extract.py  update.sh
test/: README.md  requirements-dev.txt  run_cbo.py  run_cyclomatic.py  run_dit.py  test_fps.py  test_hud_layout.py  test_menu_minimal.py  test_resource_usage.py
tests/: README.md  requirements-dev.txt  run_cbo.py  run_cyclomatic.py  run_dit.py  test_bindings_and_hud_variants.py  test_bindings_format_slab.py  test_config_paths.py  test_fps.py  test_hud_layout.py  test_input_state_sync.py  test_main_menu_smoke.py  test_menu_minimal.py  test_resource_usage.py  test_zip_security.py
training/: standalone.py
utils/: __init__.py  utils.py
(+55 files in other folders)
