[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joystick-overlay"
version = "0.3.1"
description = "Joystick Overlay: visualizador de entradas arcade para Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
	"pygame==2.6.1",
	"evdev==1.9.3",
	"radon==6.0.1",
]

[project.scripts]
joystick-overlay = "cli:run"

[tool.setuptools.packages.find]
where = ["arcade/engine"]

[tool.setuptools]
include-package-data = true
py-modules = ["cli", "engine_sys_path", "main", "configure", "tournament", "doctor"]
