[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joystick-overlay"
version = "0.3.2"
description = "Joystick Overlay: visualizador de entradas arcade para Linux"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
	"pygame==2.6.1",
	"evdev==1.9.3",
]

[project.scripts]
joystick-overlay = "cli:run"

[tool.setuptools.packages.find]
where = ["arcade/engine"]

[tool.setuptools]
include-package-data = true
py-modules = ["cli", "engine_sys_path", "main", "configure", "tournament", "doctor"]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [".venv", "venv", "tests/.tvenv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402", "F401"]
"cli.py" = ["E402", "F401"]
"configure.py" = ["E402", "F401"]
"tournament.py" = ["E402", "F401"]
"doctor.py" = ["E402", "F401"]
